--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,11 @@
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
     -->
+    <string name="blank">%d</string>
     <string name="hello_world">Hello Square World!</string>
     <string name="title_activity_login">Login</string>
     <string name="title_activity_game_search">GameSearch</string>
+    <string name="title_activity_game_page">GamePage</string>
+    <string name="title_activity_profile_page">ProfilePage</string>
+
 </resources>
