Changed profile recycleView to vertocal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,38 @@
     <string name="title_activity_game_search">GameSearch</string>
     <string name="title_activity_game_page">GamePage</string>
     <string name="title_activity_profile_page">ProfilePage</string>
+    <string name="company_IMG_logoDesc">Company Logo</string>
+    <string name="gamePage_TXT_releaseDate">Release Date:</string>
+    <string name="gamezap_logo">GameZap Logo</string>
+    <string name="empty">Empty</string>
+    <string name="gamePage_TXT_favoriteIcon">Favorite icon indication</string>
+    <string name="gamePage_TXT_gameCover">Game Cover</string>
+    <string name="gameSearch_TXT_top_sellers">Top Sellers</string>
+    <string name="gameSearch_TXT_specials">Specials</string>
+    <string name="gameSearch_TXT_coming_soon">Coming Soon</string>
+    <string name="gameSearch_TXT_random_me">Random Me</string>
+    <string name="login_TXT_signin">Sign In</string>
+    <string name="login_TXT_Hey">Hey there! is nice to see you again! 😇</string>
+    <string name="login_TXT_email">Email</string>
+    <string name="login_TXT_emailHint">expamle@mail.com</string>
+    <string name="login_TXT_password">Password</string>
+    <string name="login_TXT_passwordHint">Your Password</string>
+    <string name="login_TXT_sign_in">Sign In</string>
+    <string name="login_TXT_newcomer">Newcomer?</string>
+    <string name="login_TXT_sign_up">Sign Up</string>
+    <string name="profilePage_TXT_user_name">User Name:</string>
+    <string name="profilePage_TXT_email">Email:</string>
+    <string name="profilePage_TXT_favorite_games">Favorite Games:</string>
+    <string name="profilePage_TXT_my_favorite_games">My Favorite Games</string>
+    <string name="signup_TXT_sign_up">Sign Up</string>
+    <string name="signup_TXT_email">Email</string>
+    <string name="signup_TXT_expamle_mail_com">expamle@mail.com</string>
+    <string name="signup_TXT_password">Password</string>
+    <string name="signup_TXT_your_password">Your Password</string>
+    <string name="signup_TXT_user_name">User Name</string>
+    <string name="signup_TXT_username">Username</string>
+    <string name="signup_TXT_continue">Continue</string>
+    <string name="signup_TXT_account">Have an Account?</string>
+    <string name="signup_TXT_sign_in">Sign In</string>
 
 </resources>
