--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,6 @@
 <resources>
-    <string name="app_name">Gamezap</string>
+    <string name="app_name">GameZap</string>
     <string name="title_activity_sign_up">SignUp</string>
-    <!--
-    This string is used for square devices and overridden by hello_world in
-    values-round/strings.xml for round devices.
-    -->
     <string name="blank">%d</string>
     <string name="hello_world">Hello Square World!</string>
     <string name="title_activity_login">Login</string>
@@ -12,7 +8,7 @@
     <string name="title_activity_game_page">GamePage</string>
     <string name="title_activity_profile_page">ProfilePage</string>
     <string name="company_IMG_logoDesc">Company Logo</string>
-    <string name="gamePage_TXT_releaseDate">Release Date:</string>
+    <string name="gamePage_TXT_releaseDate">Release Date: </string>
     <string name="gamezap_logo">GameZap Logo</string>
     <string name="empty">Empty</string>
     <string name="gamePage_TXT_favoriteIcon">Favorite icon indication</string>
@@ -22,7 +18,7 @@
     <string name="gameSearch_TXT_coming_soon">Coming Soon</string>
     <string name="gameSearch_TXT_random_me">Random Me</string>
     <string name="login_TXT_signin">Sign In</string>
-    <string name="login_TXT_Hey">Hey there! is nice to see you again! 😇</string>
+    <string name="login_TXT_Hey">Hey there! is nice to see you again!</string>
     <string name="login_TXT_email">Email</string>
     <string name="login_TXT_emailHint">expamle@mail.com</string>
     <string name="login_TXT_password">Password</string>
@@ -30,9 +26,9 @@
     <string name="login_TXT_sign_in">Sign In</string>
     <string name="login_TXT_newcomer">Newcomer?</string>
     <string name="login_TXT_sign_up">Sign Up</string>
-    <string name="profilePage_TXT_user_name">User Name:</string>
-    <string name="profilePage_TXT_email">Email:</string>
-    <string name="profilePage_TXT_favorite_games">Favorite Games:</string>
+    <string name="profilePage_TXT_user_name">User Name: </string>
+    <string name="profilePage_TXT_email">Email: </string>
+    <string name="profilePage_TXT_favorite_games">Favorite Games: </string>
     <string name="profilePage_TXT_my_favorite_games">My Favorite Games</string>
     <string name="signup_TXT_sign_up">Sign Up</string>
     <string name="signup_TXT_email">Email</string>
@@ -44,5 +40,8 @@
     <string name="signup_TXT_continue">Continue</string>
     <string name="signup_TXT_account">Have an Account?</string>
     <string name="signup_TXT_sign_in">Sign In</string>
+    <string name="search_hint">Search Game...</string>
+    <string name="app_label">GameZap</string>
+    <string name="title_activity_searchable">SearchableActivity</string>
 
 </resources>
